--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
+import Announcements from "../components/Announcements.astro"
+import Navbar from "../components/Navbar.astro"
 
+const activeAnnouncement = true;
 ---
 
 <html lang="en">
@@ -8,9 +11,10 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>PT Pet Supply</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Announcements isVisible={activeAnnouncement} />
+		<Navbar />
 	</body>
 </html>
