Initialize Navbar elements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Announcements from "../components/Announcements.astro"
-import Navbar from "../components/Navbar.astro"
+import Announcements from "../components/sections/Announcements.astro"
+import Navbar from "../components/sections/Navbar.astro"
 
 const activeAnnouncement = true;
 ---
