Implement Home page component structure

--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+import Button from "../ui/Button.astro"
 import OpenStatus from "../ui/OpenStatus.astro"
 ---
 
@@ -12,4 +13,8 @@ import OpenStatus from "../ui/OpenStatus.astro"
   </div>
 
   <OpenStatus />
+
+  <Button text="Grooming Services" href="/grooming" />
+  <Button text="Products" href="/" />
+  <Button text="About Us" href="/" />
 </section>
