--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -1,8 +1,6 @@
 ---
 import Layout from "../components/layouts/Layout.astro"
-
-title: 'Grooming'
 ---
-<Layout>
+<Layout title="Grooming">
 
 </Layout>
