Implement Grooming page component structure

--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -1,6 +1,12 @@
 ---
 import Layout from "../components/layouts/Layout.astro"
+
+import Booking from "../components/sections/Booking.astro"
+import Services from "../components/sections/Services.astro"
+import GroomingReviews from "../components/sections/GroomingReviews.astro"
 ---
 <Layout title="Grooming">
-
+  <Booking />
+  <Services />
+  <GroomingReviews />
 </Layout>
