Configure Navbar page routing

--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -15,6 +15,6 @@ import OpenStatus from "../ui/OpenStatus.astro"
   <OpenStatus />
 
   <Button text="Grooming Services" href="/grooming" />
-  <Button text="Products" href="/" />
-  <Button text="About Us" href="/" />
+  <Button text="Products" href="/#products" />
+  <Button text="About Us" href="/#about" />
 </section>
