--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -1,11 +1,14 @@
 ---
 import Layout from "../components/layouts/Layout.astro"
 
+import Navbar from "../components/sections/Navbar.astro"
 import Booking from "../components/sections/Booking.astro"
 import Services from "../components/sections/Services.astro"
 import GroomingReviews from "../components/sections/GroomingReviews.astro"
 ---
+
 <Layout title="Grooming">
+  <Navbar />
   <Booking />
   <Services />
   <GroomingReviews />
