Implement View Transitions API

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import { ViewTransitions } from "astro:transitions";
+---
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -6,6 +10,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>PT Pet Supply</title>
+		<ViewTransitions />
 	</head>
 	<body>
     <slot/>
