Implement conditional render of Navbar buttons

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -27,3 +27,9 @@ const { activeAnnouncement = true } = Astro.props as LayoutProps;
     <slot/>
 	</body>
 </html>
+
+<style>
+	html {
+    scroll-behavior: smooth;
+  }
+</style>
