Initialize React, Tailwind & Shadcn

--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -5,9 +5,12 @@ import Navbar from "../components/sections/Navbar.astro"
 import Booking from "../components/sections/Booking.astro"
 import Services from "../components/sections/Services.astro"
 import GroomingReviews from "../components/sections/GroomingReviews.astro"
+
+import '@/styles/globals.css'
 ---
 
 <Layout title="Grooming">
+  <Navbar />
   <Booking />
   <Services />
   <GroomingReviews />
