--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,27 @@
 ---
+interface MainProps {
+  activeAnnouncement: boolean;
+}
+
 import Layout from "../components/layouts/Layout.astro"
 
+import Announcements from "../components/sections/Announcements.astro"
+import Navbar from "../components/sections/Navbar.astro"
 import Hero from "../components/sections/Hero.astro";
 import Testimonials from "../components/sections/Testimonials.astro";
 import Products from "../components/sections/Products.astro";
 import Staff from "../components/sections/Staff.astro";
 import About from "../components/sections/About.astro";
 import Contact from "../components/sections/Contact.astro";
+
+const { activeAnnouncement = true } = Astro.props as MainProps;
+
+import '@/styles/globals.css'
 ---
 
 <Layout title="home">
+	<Announcements isVisible={activeAnnouncement} />
+	<Navbar />
 	<Hero />
 	<Testimonials />
 	<Products />
@@ -17,3 +29,9 @@ import Contact from "../components/sections/Contact.astro";
 	<Staff />
 	<Contact />
 </Layout>
+
+<style>
+	html {
+    scroll-behavior: smooth;
+  }
+</style>
