--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../components/layouts/Layout.astro"
 
-import Navbar from "../components/sections/Navbar.astro"
+import Header from "../components/sections/Header.astro"
 import Booking from "../components/sections/Booking.astro"
 import Services from "../components/sections/Services.astro"
 import GroomingReviews from "../components/sections/GroomingReviews.astro"
@@ -10,7 +10,7 @@ import '@/styles/globals.css'
 ---
 
 <Layout title="Grooming">
-  <Navbar />
+  <Header />
   <Booking />
   <Services />
   <GroomingReviews />
