Implement Hero outline

--- a/src/components/sections/Announcements.astro
+++ b/src/components/sections/Announcements.astro
@@ -2,8 +2,10 @@
 const { isVisible } = Astro.props;
 ---
 
-{isVisible && (
-  <section>
-    <h2>Announcements</h2>
-  </section>
-)}
+{
+  isVisible && (
+    <section class="flex">
+      <h2 class="mx-auto justify-between px-6 py-2">Announcements</h2>
+    </section>
+  )
+}
