--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -2,6 +2,19 @@
 
 ---
 
-<section>
-  <h3>Hero</h3>
+<section class="flex relative">
+  <div class="flex relative mx-auto pt-10">
+    <img
+      src="https://placehold.co/300x300"
+      alt="PT Pet Supply logo"
+      class="pt-48 pr-10"
+    />
+    <img src="https://placehold.co/500x200" alt="Dog" class="pt-10 pb-48" />
+    <img src="https://placehold.co/300x300" alt="Dog" class="pt-48 pl-10" />
+  </div>
+  <img
+    src="https://placehold.co/4000x200"
+    alt="Background picket fence"
+    class="absolute bottom-0 left-0 w-full h-[35%] object-cover z-[-1]"
+  />
 </section>
