--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -5,7 +5,7 @@ import Links from "./Links.astro";
 import MobileDetect from "mobile-detect";
 
 const phoneNumber = "508-943-9600";
-const address = "86 Worcester Rd, Webster MA";
+const address = "86 Worcester Rd, Webster";
 
 const userAgent = Astro.request.headers.get("user-agent") ?? "";
 const md = new MobileDetect(userAgent);
@@ -13,9 +13,9 @@ const isMobile = md.mobile();
 ---
 
 <section class="flex w-full mx-auto px-6">
-  <div class="flex-1 flex flex-nowrap">
+  <div class="flex-1 flex flex-nowrap h-full">
     <div transition:persist class="flex items-center">
-      <img src="src/assets/phone.svg" alt="phone" />
+      <img src="src/assets/phone.svg" alt="phone" class="pr-2" />
       {
         isMobile ? (
           <a href={`tel:${phoneNumber}`}>{phoneNumber}</a>
@@ -26,7 +26,7 @@ const isMobile = md.mobile();
     </div>
 
     <div transition:persist class="flex items-center ml-4">
-      <img src="src/assets/map-pin.svg" alt="location" />
+      <img src="src/assets/map-pin.svg" alt="location" class="pr-2" />
       <a
         href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!3m1!4b1!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MDkxNi4wIKXMDSoASAFQAw%3D%3D"
         >{address}</a
