--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -2,19 +2,27 @@
 
 ---
 
-<section class="flex relative">
-  <div class="flex relative mx-auto pt-10">
+<section class="flex relative mx-auto">
+  <div class="flex relative mx-auto pt-16">
     <img
       src="https://placehold.co/300x300"
-      alt="PT Pet Supply logo"
-      class="pt-48 pr-10"
+      alt="Dog"
+      class="pt-48 pr-20 drop-shadow-lg"
     />
-    <img src="https://placehold.co/500x200" alt="Dog" class="pt-10 pb-48" />
-    <img src="https://placehold.co/300x300" alt="Dog" class="pt-48 pl-10" />
+    <img
+      src="https://placehold.co/500x200"
+      alt="PT Pet Supply logo"
+      class="pb-72 drop-shadow-xl"
+    />
+    <img
+      src="https://placehold.co/300x300"
+      alt="Dog"
+      class="pt-48 pl-20 drop-shadow-lg"
+    />
   </div>
   <img
     src="https://placehold.co/4000x200"
     alt="Background picket fence"
-    class="absolute bottom-0 left-0 w-full h-[35%] object-cover z-[-1]"
+    class="absolute bottom-5 left-0 w-full h-[35%] object-cover z-[-1]"
   />
 </section>
