--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -1,4 +1,6 @@
 ---
+// Links.astro
+
 interface LinksProps {
   currentPage: string;
 }
@@ -8,11 +10,17 @@ import Button from "../ui/Button.astro";
 const currentPage = Astro.url.pathname as LinksProps["currentPage"];
 ---
 
-<Button text="Products" href="/#products" />
-<Button text="About Us" href="/#about" />
-
-{
-  currentPage !== "/grooming" && (
-    <Button transition:slide text="Pet Grooming" href="/grooming" />
-  )
-}
+<div class="flex space-x-4">
+  <Button text="Products" href="/#products" class="pl-6" />
+  <Button text="About Us" href="/#about" class="pl-6" />
+  {
+    currentPage !== "/grooming" && (
+      <Button
+        transition:slide
+        text="Pet Grooming"
+        href="/grooming"
+        class="pl-6"
+      />
+    )
+  }
+</div>
