--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -22,3 +22,12 @@ import "@/styles/globals.css";
     <slot />
   </body>
 </html>
+
+<style>
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+</style>
