--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,9 +3,9 @@
 ---
 
 <section class="flex relative mx-auto">
-  <div class="flex relative mx-auto pt-16">
+  <div class="flex relative mx-auto">
     <img
-      src="https://placehold.co/300x300"
+      src="https://placehold.co/500x500"
       alt="Dog"
       class="pt-48 pr-20 drop-shadow-lg"
     />
@@ -15,7 +15,7 @@
       class="pb-72 drop-shadow-xl"
     />
     <img
-      src="https://placehold.co/300x300"
+      src="https://placehold.co/500x500"
       alt="Dog"
       class="pt-48 pl-20 drop-shadow-lg"
     />
