--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="flex relative mx-auto">
+<section class="flex relative mx-auto pb-10">
   <div class="flex relative mx-auto">
     <img
       src="https://placehold.co/500x500"
@@ -12,7 +12,7 @@
     <img
       src="https://placehold.co/500x200"
       alt="PT Pet Supply logo"
-      class="pb-72 drop-shadow-xl"
+      class="pb-80 drop-shadow-xl"
     />
     <img
       src="https://placehold.co/500x500"
@@ -23,6 +23,6 @@
   <img
     src="https://placehold.co/4000x200"
     alt="Background picket fence"
-    class="absolute bottom-5 left-0 w-full h-[35%] object-cover z-[-1]"
+    class="absolute bottom-12 left-0 w-full h-[35%] object-cover z-[-1]"
   />
 </section>
