--- a/src/components/sections/Announcements.astro
+++ b/src/components/sections/Announcements.astro
@@ -5,7 +5,7 @@ const { isVisible } = Astro.props;
 {
   isVisible && (
     <section class="flex">
-      <h2 class="mx-auto justify-between px-6 py-2">Announcements</h2>
+      <h2 class="mx-auto justify-between px-6 pt-12">Announcements</h2>
     </section>
   )
 }
