--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,10 @@ import Layout from "../components/layouts/Layout.astro";
 import Header from "../components/sections/Header.astro";
 import Hero from "../components/sections/Hero.astro";
 import Testimonials from "../components/sections/Testimonials.astro";
-import Products from "../components/sections/Products.astro";
-import Staff from "../components/sections/Staff.astro";
 import About from "../components/sections/About.astro";
+import Products from "../components/sections/Products.astro";
+import Blog from "../components/sections/Blog.astro";
+import Staff from "../components/sections/Staff.astro";
 import Contact from "../components/sections/Contact.astro";
 ---
 
@@ -14,8 +15,9 @@ import Contact from "../components/sections/Contact.astro";
   <Header />
   <Hero />
   <Testimonials />
-  <Products />
   <About />
+  <Products />
+  <Blog />
   <Staff />
   <Contact />
 </Layout>
