Remove GroomingReview component

--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -1,17 +1,15 @@
 ---
-import Layout from "../components/layouts/Layout.astro"
+import Layout from "../components/layouts/Layout.astro";
 
-import Header from "../components/sections/Header.astro"
-import Booking from "../components/sections/Booking.astro"
-import Services from "../components/sections/Services.astro"
-import GroomingReviews from "../components/sections/GroomingReviews.astro"
+import Header from "../components/sections/Header.astro";
+import Booking from "../components/sections/Booking.astro";
+import Services from "../components/sections/Services.astro";
 
-import '@/styles/globals.css'
+import "@/styles/globals.css";
 ---
 
 <Layout title="Grooming">
   <Header />
   <Booking />
   <Services />
-  <GroomingReviews />
 </Layout>
