Implement Contact Form skeleton

--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -1,7 +1,7 @@
 ---
-
+import ContactForm from "../ui/ContactForm.jsx";
 ---
 
 <section>
-  <h3>Contact</h3>
+  <ContactForm client:load />
 </section>
