Integrate Google Maps API

--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -1,7 +1,10 @@
 ---
 import ContactForm from "../ui/ContactForm.jsx";
+import Map from "../ui/Map.astro";
 ---
 
 <section>
   <ContactForm client:load />
+
+  <Map />
 </section>
