Implement Hero assets & styling

--- a/src/components/sections/Announcements.astro
+++ b/src/components/sections/Announcements.astro
@@ -4,8 +4,8 @@ const { isVisible } = Astro.props;
 
 {
   isVisible && (
-    <section class="flex">
-      <h2 class="mx-auto justify-between px-6 pt-12">Announcements</h2>
+    <section class="flex bg-[#7F0201] font-bold tracking-wider text-white">
+      <h2 class="mx-auto justify-between px-6 py-2">Announcements</h2>
     </section>
   )
 }
