--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,28 +1,29 @@
----
-
----
-
-<section class="flex relative mx-auto pb-10">
-  <div class="flex relative mx-auto">
-    <img
-      src="https://placehold.co/500x500"
-      alt="Dog"
-      class="pt-48 pr-20 drop-shadow-lg"
-    />
-    <img
-      src="https://placehold.co/500x200"
-      alt="PT Pet Supply logo"
-      class="pb-80 drop-shadow-xl"
-    />
-    <img
-      src="https://placehold.co/500x500"
-      alt="Dog"
-      class="pt-48 pl-20 drop-shadow-lg"
-    />
-  </div>
+<section class="relative mx-auto flex flex-col items-center">
   <img
-    src="https://placehold.co/4000x200"
+    src="https://placehold.co/500x200"
+    alt="PT Pet Supply logo"
+    class="pt-10 pb-96 drop-shadow-2xl"
+  />
+
+  <img
+    src="/src/assets/mainecoon.png"
+    alt="Maine Coon"
+    class="absolute bottom-0 left-0 drop-shadow-2xl max-w-[500px] max-h-[500px] object-contain -mb-16"
+  />
+  <img
+    src="/src/assets/husky.png"
+    alt="Siberian Husky"
+    class="absolute bottom-0 right-0 drop-shadow-2xl max-w-[500px] max-h-[500px] object-contain -mb-12"
+  />
+
+  <img
+    src="/src/assets/landscape.png"
+    alt="Background landscape"
+    class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full object-cover z-[-2]"
+  />
+  <img
+    src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-12 left-0 w-full h-[35%] object-cover z-[-1]"
+    class="absolute bottom-12 left-1/2 transform -translate-x-1/2 w-full h-[50%] max-w-none object-cover z-[-1]"
   />
 </section>
