--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -13,6 +13,13 @@ import "@/styles/globals.css";
     <meta name="generator" content={Astro.generator} />
     <title>PT Pet Supply</title>
     <link
+      rel="preload"
+      href="/fonts/CenzoFlare-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
@@ -29,5 +36,8 @@ import "@/styles/globals.css";
     height: 100%;
     margin: 0;
     padding: 0;
+  }
+  body {
+    font-family: "Cenzo Flare", sans-serif;
   }
 </style>
