--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Cenzo Flare';
+  src: url('/fonts/CenzoFlare-Regular.woff2') format('woff2'),
+       url('/fonts/CenzoFlare-Regular.woff') format('woff'),
+       url('/fonts/CenzoFlare-Regular.ttf') format('truetype'),
+       url('/fonts/CenzoFlare-Bold.woff2') format('woff2'),
+       url('/fonts/CenzoFlare-Bold.woff') format('woff'),
+       url('/fonts/CenzoFlare-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
