Initial implementation of sticky header

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,6 +2,13 @@
 
 ---
 
-<section id="about">
-  <h3>About</h3>
+<section id="about" class="mx-10">
+  <h3 class="pb-3 font-bold">Where Pets are People too</h3>
+  <p class="mx-10">
+    Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
+    adipiscing ante posuere egestas penatibus sollicitudin. Placerat odio
+    suscipit adipiscing pellentesque; himenaeos dapibus egestas vitae? Consequat
+    sagittis cras lacinia, elit laoreet primis turpis sit. Conubia nulla per
+    nascetur luctus laoreet nulla elit est.
+  </p>
 </section>
