--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -34,6 +34,7 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
     href="/#about"
     class="pl-6"
   />
+  <Button transition:animate="slide" text="Blog" href="/#blog" class="pl-6" />
   {
     currentPage !== "/grooming" && (
       <Button
