Temp styling to test Intersection Observer with sticky header

--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -3,7 +3,7 @@ import ContactForm from "../ui/ContactForm.jsx";
 import Map from "../ui/Map.astro";
 ---
 
-<section>
+<section class="mx-10 pt-10">
   <ContactForm client:load />
 
   <Map />
