--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -2,6 +2,18 @@
 
 ---
 
-<section id="products">
-  <h3>Products</h3>
+<section id="products" class="mx-10 pt-10">
+  <h3 class="pb-3 font-bold">Products</h3>
+  <p class="mx-10">
+    Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
+    maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
+    aenean. Lorem feugiat integer purus nullam penatibus faucibus semper
+    ridiculus dui. Dolor blandit laoreet nisi iaculis curae; primis posuere
+    tortor venenatis? Elit praesent tempor dictum fusce amet duis dictumst
+    laoreet tellus. Montes dignissim nam massa quam auctor nisl torquent congue
+    sit. Duis sodales volutpat turpis nostra morbi mus porttitor proin montes?
+    Scelerisque dis elit nostra accumsan viverra auctor dui nascetur congue. Et
+    porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
+    odio posuere hac senectus posuere lectus nullam?
+  </p>
 </section>
