--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -4,8 +4,8 @@ import ReviewsCard from "../ui/ReviewsCard.jsx";
 const businessId = "YOUR_BUSINESS_ID";
 ---
 
-<div class="container mx-auto py-10">
-  <!-- <ReviewsCard businessId={businessId} client:load />
+<div class="container mx-auto pt-10">
   <ReviewsCard businessId={businessId} client:load />
-  <ReviewsCard businessId={businessId} client:load /> -->
+  <ReviewsCard businessId={businessId} client:load />
+  <ReviewsCard businessId={businessId} client:load />
 </div>
