--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="about" class="mx-10">
+<section id="about" class="mx-10 pt-20">
   <h3 class="pb-3 font-bold">Where Pets are People too</h3>
   <p class="mx-10">
     Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
