--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<section id="blog">
-  <h3>Blog</h3>
+<section id="blog" class="mx-10 pt-10">
+  <h3 class="pb-3 font-bold">Blog</h3>
 </section>
