--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -2,6 +2,7 @@
 import StaffCarousel from "../ui/StaffCarousel.astro";
 ---
 
-<section>
+<section class="mx-10 pt-10">
+  <h3 class="pb-3 font-bold">Our Staff</h3>
   <StaffCarousel />
 </section>
